--- a/stephanie/scss/_footer.scss
+++ b/stephanie/scss/_footer.scss
@@ -6,3 +6,6 @@
  * For global styling see layout.css
  */
 
+.system-main-menu {
+    color: $offwhite;
+}
